...
                                                <rect key="frame" x="324" y="0.0" width="70" height="34"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="GQh-O4-CJJ"/>
                                                    <constraint firstAttribute="height" constant="34" id="pKL-G7-jrw"/>
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="SEARCH">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="searchButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2yb-y3-iHn"/>
                                                </connections>
                                            </button>
...
